# media-downloader

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  publish.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: activity-bar.tsx  disable-context-menu.tsx  form.tsx  header.tsx  home.tsx  icons.tsx  logs.tsx  main.tsx  md-popover.tsx  mode-toggle.tsx  placeholder.tsx  settings.tsx  terminal-display.tsx  theme-provider.tsx  ui.tsx
app/components/ui/: popover.tsx
app/components/views/: about.tsx  home.tsx  logs.tsx  settings.tsx
app/constants/: index.ts  toastify.ts
app/contexts/: terminal-output.tsx  view.tsx
app/functions/: disable-context-menu.ts  index.ts  misc.ts  yt-dlp.ts
app/locales/: en.ts  fr.ts  index.ts
app/stores/: about.ts  app-info.ts  form-store.ts  home.ts  logs.ts  settings.ts
app/types/: form-input.ts  form.ts
components/component/: component.tsx
public/: splashscreen.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/icons/: icon.icns
src-tauri/src/: app-info.toml  main.rs
