[package]
name = "app"
version = "0.6.1"
description = "yt-dlp GUI wrapper"
authors = ["Gaël Jacquin"]
license = "Unlicense license"
repository = "https://github.com/gaeljacquin/media-downloader"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "os-all", "shell-execute", "dialog-open", "path-all", "notification-all", "system-tray", "shell-open", "shell-sidecar" ] }
toml = "0.8.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
